fix: add text-overflow for element__title

--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -3,6 +3,9 @@
   font-weight: 900;
   font-size: 1.5rem;
   line-height: 120%;
+  width: 85%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 425px) {
